使用 Colab 创建而成

--- a/colab/MatchingEntities.ipynb
+++ b/colab/MatchingEntities.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/fusichao/100-Days-Of-ML-Code/blob/master/colab/MatchingEntities.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "q-77hle6vfgl"
       },
       "source": [
@@ -53,11 +43,11 @@
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
-        "id": "gW7SVi92vfgr",
-        "outputId": "2120929d-b7be-4d69-ecc9-b775d3e4cf1e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "gW7SVi92vfgr",
+        "outputId": "2120929d-b7be-4d69-ecc9-b775d3e4cf1e"
       },
       "outputs": [
         {
@@ -152,11 +142,11 @@
       "cell_type": "code",
       "execution_count": 2,
       "metadata": {
-        "id": "tb3-jLPDvfgt",
-        "outputId": "aa52f1db-b569-4383-fbcd-46bbdbed920e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "tb3-jLPDvfgt",
+        "outputId": "aa52f1db-b569-4383-fbcd-46bbdbed920e"
       },
       "outputs": [
         {
@@ -186,11 +176,11 @@
       "cell_type": "code",
       "execution_count": 3,
       "metadata": {
-        "id": "bYIBZZXDvfhQ",
-        "outputId": "20dbd40c-3ebd-4b08-ac79-bb07881fd34c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "bYIBZZXDvfhQ",
+        "outputId": "20dbd40c-3ebd-4b08-ac79-bb07881fd34c"
       },
       "outputs": [
         {
@@ -276,12 +266,12 @@
       "cell_type": "code",
       "execution_count": 5,
       "metadata": {
-        "id": "eSL4l2upvfhU",
-        "outputId": "71a3c091-522a-4e26-a107-10d3722c35c0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "eSL4l2upvfhU",
+        "outputId": "71a3c091-522a-4e26-a107-10d3722c35c0"
       },
       "outputs": [
         {
@@ -344,8 +334,6 @@
       "cell_type": "code",
       "execution_count": 6,
       "metadata": {
-        "id": "NhKma6_jvfhV",
-        "outputId": "d0f50959-fbfa-4509-f733-03f63f7bfc46",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 161,
@@ -362,7 +350,9 @@
             "07ec92920a1340f5a0435272188e5702",
             "4b58a2c89f9141e5ade445194a9b7fb6"
           ]
-        }
+        },
+        "id": "NhKma6_jvfhV",
+        "outputId": "d0f50959-fbfa-4509-f733-03f63f7bfc46"
       },
       "outputs": [
         {
@@ -408,6 +398,159 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "subject1_first_code.iris_codes[0].shape, subject1_first_code.iris_codes[1].shape"
+      ],
+      "metadata": {
+        "id": "XAU2Iwz33cYI",
+        "outputId": "34958980-c8dd-48f3-bedf-3b6ea0e239d4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((16, 256, 2), (16, 256, 2))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "subject1_first_code.mask_codes[0].shape, subject1_first_code.mask_codes[1].shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eG60gf5hAqD3",
+        "outputId": "3725a751-ebc6-45b5-9a8a-ee875bb33b9d"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((16, 256, 2), (16, 256, 2))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from typing import List, Optional\n",
+        "\n",
+        "import numpy as np\n",
+        "from pydantic import confloat, conint\n",
+        "\n",
+        "from iris.io.dataclasses import IrisTemplate\n",
+        "from iris.nodes.matcher.hamming_distance_matcher_interface import Matcher\n",
+        "from iris.nodes.matcher.utils import hamming_distance\n",
+        "\n",
+        "\n",
+        "class HammingDistanceMatcher_fsc(Matcher):\n",
+        "    \"\"\"Hamming distance Matcher with additional optional features.\n",
+        "\n",
+        "    Algorithm steps:\n",
+        "       1) Calculate counts of nonmatch irisbits (IB_Counts) in common unmasked region and the counts of common maskbits (MB_Counts) in common unmasked region for both upper and lower half of iris, respectively.\n",
+        "       2) If parameter norm_mean is defined, calculate normalized Hamming distance (NHD) based on IB_Counts, MB_Counts and norm_mean.\n",
+        "       3) If parameter weights is defined, calculate weighted Hamming distance (WHD) based on IB_Counts, MB_Counts and weights.\n",
+        "       4) If parameters norm_mean and weights are both defined, calculate weighted normalized Hamming distance (WNHD) based on IB_Counts, MB_Counts, norm_mean and weights.\n",
+        "       5) Otherwise, calculate Hamming distance (HD) based on IB_Counts and MB_Counts.\n",
+        "       6) If parameter rotation_shift is > 0, repeat the above steps for additional rotations of the iriscode.\n",
+        "       7) Return the minimum distance from above calculations.\n",
+        "    \"\"\"\n",
+        "\n",
+        "    class Parameters(Matcher.Parameters):\n",
+        "        \"\"\"HammingDistanceMatcher parameters.\"\"\"\n",
+        "\n",
+        "        rotation_shift: conint(ge=0, strict=True)\n",
+        "        normalise: bool\n",
+        "        norm_mean: confloat(ge=0, le=1, strict=True)\n",
+        "        norm_gradient: float\n",
+        "        separate_half_matching: bool\n",
+        "        weights_path: Optional[str]\n",
+        "        weights: Optional[List[np.ndarray]]\n",
+        "\n",
+        "    __parameters_type__ = Parameters\n",
+        "\n",
+        "    def __init__(\n",
+        "        self,\n",
+        "        rotation_shift: conint(ge=0, strict=True) = 15,\n",
+        "        normalise: bool = True,\n",
+        "        norm_mean: confloat(ge=0, le=1, strict=True) = 0.45,\n",
+        "        norm_gradient: float = 0.00005,\n",
+        "        separate_half_matching: bool = True,\n",
+        "        weights_path: Optional[str] = None,\n",
+        "        weights: Optional[List[np.ndarray]] = None,\n",
+        "    ) -> None:\n",
+        "        \"\"\"Assign parameters.\n",
+        "\n",
+        "        Args:\n",
+        "            rotation_shift (Optional[conint(ge=0, strict=True)], optional): Rotation shifts allowed in matching (in columns). Defaults to 15.\n",
+        "            normalise (bool, optional): Flag to normalize HD. Defaults to True.\n",
+        "            norm_mean (Optional[confloat(ge=0, le = 1, strict=True)], optional): Nonmatch distance used for normalized HD. Optional parameter for normalized HD. Defaults to 0.45.\n",
+        "            norm_gradient: float, optional): Gradient for linear approximation of normalization term. Defaults to 0.00005.\n",
+        "            separate_half_matching (bool, optional): Separate the upper and lower halves for matching. Defaults to True.\n",
+        "            weights_path (Optional[str], optional): Path to the weights table. Optional parameter for weighted HD. Defaults to None.\n",
+        "            weights (Optional[List[np.ndarray]], optional): list of weights table. Optional parameter for weighted HD. Defaults to None.\n",
+        "        \"\"\"\n",
+        "        if weights_path is not None:\n",
+        "            weights = self.load_weights(weights_path)\n",
+        "        super().__init__(\n",
+        "            rotation_shift=rotation_shift,\n",
+        "            normalise=normalise,\n",
+        "            norm_mean=norm_mean,\n",
+        "            norm_gradient=norm_gradient,\n",
+        "            separate_half_matching=separate_half_matching,\n",
+        "            weights_path=weights_path,\n",
+        "            weights=weights,\n",
+        "        )\n",
+        "\n",
+        "    def run(self, template_probe: IrisTemplate, template_gallery: IrisTemplate) -> float:\n",
+        "        \"\"\"Match iris templates using Hamming distance.\n",
+        "\n",
+        "        Args:\n",
+        "            template_probe (IrisTemplate): Iris template from probe.\n",
+        "            template_gallery (IrisTemplate): Iris template from gallery.\n",
+        "\n",
+        "        Returns:\n",
+        "            float: matching distance.\n",
+        "        \"\"\"\n",
+        "        score, rot = hamming_distance(\n",
+        "            template_probe=template_probe,\n",
+        "            template_gallery=template_gallery,\n",
+        "            rotation_shift=self.params.rotation_shift,\n",
+        "            normalise=self.params.normalise,\n",
+        "            norm_mean=self.params.norm_mean,\n",
+        "            norm_gradient=self.params.norm_gradient,\n",
+        "            separate_half_matching=self.params.separate_half_matching,\n",
+        "            weights=self.params.weights,\n",
+        "        )\n",
+        "\n",
+        "        return score, rot\n"
+      ],
+      "metadata": {
+        "id": "0Ayasld7EMZu"
+      },
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "yL6Hpb2ivfhW"
@@ -433,14 +576,53 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 27,
       "metadata": {
         "id": "kkL7f0-RvfhW"
       },
       "outputs": [],
       "source": [
-        "matcher = iris.HammingDistanceMatcher()"
+        "matcher_fsc = HammingDistanceMatcher_fsc(rotation_shift=30)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "same_subjects_distance, rot1 = matcher_fsc.run(subject1_first_code, subject1_second_code)\n",
+        "\n",
+        "print(f\"Computed distance between eyes of the `subject_1` is {same_subjects_distance:.4f}, {rot1}\")\n",
+        "\n",
+        "different_subjects_distance, rot2 = matcher_fsc.run(subject1_first_code, subject2_code)\n",
+        "\n",
+        "print(f\"Computed distance between eyes of the `subject_1` and `subject_2` is {different_subjects_distance:.4f}, {rot2}\")"
+      ],
+      "metadata": {
+        "id": "vUwUtHo4FEGy",
+        "outputId": "47e5d4f4-867d-4959-ecf8-22892c366060",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Computed distance between eyes of the `subject_1` is 0.1466, -5\n",
+            "Computed distance between eyes of the `subject_1` and `subject_2` is 0.4490, 0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "x4IvmB49FEJy"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -458,11 +640,11 @@
       "cell_type": "code",
       "execution_count": 8,
       "metadata": {
-        "id": "9fdyCUvnvfhY",
-        "outputId": "af4a69e6-5f78-4df4-f36d-2aed481ae458",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9fdyCUvnvfhY",
+        "outputId": "af4a69e6-5f78-4df4-f36d-2aed481ae458"
       },
       "outputs": [
         {
@@ -517,8 +699,7 @@
       "version": "3.9.0"
     },
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
